fixed alignment

--- a/styles/ImageCreation.module.css
+++ b/styles/ImageCreation.module.css
@@ -37,18 +37,34 @@
   border-radius: 6px;
   color: white;
   margin-bottom: 12px;
+  width: 233px;
+height: 88px;
+padding: 11px 137px 62px 16px;
+gap: 6.41px;
+border: 8px;
+opacity: 0px;
+
 }
 
 .sidebar .generateButton {
   width: 100%;
   padding: 12px;
-  background-color: #6e44ff;
+  background: linear-gradient(110.25deg, #8A71FF 14.25%, #6949FF 47.06%);
   border: none;
   border-radius: 6px;
   color: white;
   font-weight: bold;
   margin-bottom: 20px;
   cursor: pointer;
+
+width: 233px;
+height: 32px;
+padding: 8px 81px 8px 81px;
+gap: 6.41px;
+/* border-radius: 8px; */
+opacity: 0px;
+border: 0.8px solid;
+border-image-source: linear-gradient(180deg, #C5C5C5 0%, #1C1C1C 100%);
 }
 
 .sidebar .section {
@@ -56,15 +72,26 @@
 }
 
 .sidebar .label {
-  font-size: 14px;
-  font-weight: bold;
   margin-bottom: 8px;
   display: block;
+ font-size: 13px;
+font-weight: 400;
+line-height: 15.73px;
+letter-spacing: -0.02em;
+text-align: left;
+
 }
 
 .sidebar .buttonGroup {
   display: flex;
   justify-content: space-between;
+  width: 72px;
+height: 32px;
+padding: 3.5px 11px 3.5px 11px;
+gap: 6.41px;
+border-radius: 8px 0px 0px 0px;
+opacity: 0px;
+
 }
 
 .sidebar .optionButton {
@@ -76,8 +103,41 @@
   border-radius: 6px;
   color: white;
   cursor: pointer;
-}
+  width: 230px;
+  height: 32px;
+padding: 8px 16px 8px 26px;
+gap: 6.41px;
+border-radius: 8px;
+opacity: 0px;
 
+}
+.optionButtons{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-items: center;
+  padding: 10px 20px;
+  background-color: #2c2c2e;
+  border: none;
+  border-radius: 6px;
+  color: white;
+  width: 230px;
+  height: 32px;
+  cursor: pointer;
+font-size: 8px;
+font-weight: 500;
+line-height: 9.68px;
+letter-spacing: -0.02em;
+text-align: left;
+
+}
+.spantext{
+  color:grey;
+
+ 
+  
+}
 .sidebar .optionButton:first-child {
   margin-left: 0;
 }
@@ -234,6 +294,13 @@
   padding: 10px 20px; 
   cursor: pointer; 
   gap: 10px; 
+  width: 72px;
+height: 32px;
+padding: 3.5px 11px 3.5px 11px;
+gap: 6.41px;
+border-radius: 8px 0px 0px 0px;
+opacity: 0px;
+
   
 }
 .heading{
@@ -263,8 +330,4 @@ color: #FFFFFF;
 }
 /* bg blue */
 
-/* .image:hover{
-  background-color:blur;
-  width: 800px;
 
-} */
